--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<version>7</version>
 	</parent>
 
-	<groupId>com.jakewharton</groupId>
+    <groupId>cz.atomsoft.android</groupId>
 	<artifactId>hanselandgretel-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.3-SNAPSHOT</version>
@@ -29,7 +29,7 @@
 		<connection>scm:git:git://github.com/JakeWharton/HanselAndGretel.git</connection>
 		<developerConnection>scm:git:git@github.com:JakeWharton/HanselAndGretel.git</developerConnection>
 	</scm>
-	
+
 	<developers>
 		<developer>
 			<name>Jake Wharton</name>
@@ -42,7 +42,7 @@
 			</roles>
 		</developer>
 	</developers>
-	
+
 	<licenses>
 		<license>
 			<name>Apache License Version 2.0</name>
